--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         return ;
       }
 
-      ws.send(`<strong>${user}::</strong> ${messageBox.value}`);
-      showMessage(`<strong>${user}::</strong> ${messageBox.value}`);
+      ws.send(`${user}:: ${messageBox.value}`);
+      showMessage(`${user}:: ${messageBox.value}`);
     }
 
     init();
