--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Secret Chat</h1>
-<div id="messages" style="height: 400px; overflow: scroll"></div>
+<pre id="messages" style="height: 400px; overflow: scroll"></pre>
 <input type="text" id="messageBox" placeholder="Type your message here" style="display: block; width: 100%; margin-bottom: 10px; padding: 10px;" />
 <button id="send" title="Send Message!" style="width: 100%; height: 30px;">Send Message</button>
 
@@ -14,7 +14,7 @@
 
     function showMessage(message) {
 	  console.log(message);
-      messages.textContent += `<br>${message}`;
+      messages.textContent += `\n\n${message}`;
       messages.scrollTop = messages.scrollHeight;
       messageBox.value = '';
     }
